--- a/SLC_SM_Create Service Inventory Item_1/SLC_SM_Create Service Inventory Item_1.csproj
+++ b/SLC_SM_Create Service Inventory Item_1/SLC_SM_Create Service Inventory Item_1.csproj
@@ -22,9 +22,7 @@
     <PackageReference Include="Skyline.DataMiner.Dev.Automation" Version="10.5.1" />
   </ItemGroup>
   <ProjectExtensions>
-    <VisualStudio>
-      <UserProperties DisLinkedXmlFile="..\Add Service Parameter.xml" DisProjectType="automationScriptProject" DisLinkId="1" />
-    </VisualStudio>
+    <VisualStudio><UserProperties DisLinkedXmlFile="..\SLC_SM_Create Service Inventory Item.xml" DisLinkId="1" DisProjectType="automationScriptProject" /></VisualStudio>
   </ProjectExtensions>
   <Import Project="..\SharedProject\SharedProject.projitems" Label="Shared" />
   <ItemGroup>
