Booking Manager ID stored on the service item.

--- a/Launch Interactive Subscript_1/Launch Interactive Subscript_1.csproj
+++ b/Launch Interactive Subscript_1/Launch Interactive Subscript_1.csproj
@@ -33,4 +33,5 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
   </ItemGroup>
+  <Import Project="..\SharedProjectIAS\SharedProjectIAS.projitems" Label="Shared" />
 </Project>
